# maumi-backend

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: auth.py  router.py
app/api/v1/endpoints/: chat.py  sessions.py
app/checkpointers/: postgres_checkpointer.py
app/core/: config.py  logger.py  utils.py
app/db/: database.py  models.py  redis.py
app/graphs/: chatbot_chain.py
app/schemas/: authentication.py  chat.py  session.py
app/services/: chatbot_chain.py  llms.py
migration/: env.py
migration/versions/: 2ffe1836707c_delete_username.py  3210d4e1ab47_create_users_table2.py  602e0f5dec7c_add_enum_for_messagerole.py  87f2b1eea221_.py  8b1560bb5244_create_users_table.py
